--- a/style.css
+++ b/style.css
@@ -40,4 +40,35 @@ a.cv-link{
     color: #1DDDBD;
     padding: 10px 25px;
     font-size: 22px;
+    border-radius: 8px;
+}
+.about-me{
+    display: flex;
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+.colorized-me{
+    color: #FB6857;
+}
+.about-me-text{
+    margin-top: 10%;
+    margin-left: 15%;
+}
+p.about-me-details{
+    color: #242B2E;
+}
+h2{
+    font-size: 65px;
+    font-family: 'Silkscreen', cursive;
+}
+a.Contact-link{
+    text-decoration: none;
+    background-color: white;
+    border: 2px solid #FB6857;
+    color:#FB6857;
+    padding: 10px 25px;
+    font-size: 22px;
+    border-radius: 8px;
 }
